# PrioritAIze

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  analysis_report.md  analysis_risultati.md  docker-compose.yaml  main.py  project.md  pyproject.toml  report.typ  risultati_slide.txt
app/: config.py  db.py  main.py  middleware.py  templating.py
app/routes/: api.py  views.py
app/services/: batch.py  impact.py  llm.py  nvd.py  pipeline.py  scorer.py
app/services/assets/: cloud.py  cmdb.py
app/static/: dashboard.js  style.css
app/templates/: 404.html  base.html  batch.html  batch_result.html  custom_evaluate.html  dashboard.html  evaluate.html  metrics.html  result.html
data/: assets.yaml  cost_model.yaml
docs/: phase2-plan.md  scoring_formulas.md
postgres/: init.sql
scripts/: analysis.py
